--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "wetube clone",
   "main": "server.js",
   "scripts": {
+    "start" : "node build/init.js",
+    "build":"npm run build:server && npm run build:assets",
+    "build:server":"babel src -d build",
+    "build:assets":"webpack --mode=production",
     "dev:server": "nodemon",
-    "dev:assets": "webpack --config webpack.config.js"
+    "dev:assets": "webpack --mode=development -w"
   },
   "author": "or",
   "license": "MIT",
@@ -24,6 +28,7 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
