--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "wetube clone",
   "main": "server.js",
   "scripts": {
-    "start" : "node build/init.js",
-    "build":"npm run build:server && npm run build:assets",
-    "build:server":"babel src -d build",
-    "build:assets":"webpack --mode=production",
+    "start": "node build/init.js",
+    "build": "npm run build:server && npm run build:assets",
+    "build:server": "babel src -d build",
+    "build:assets": "webpack --mode=production",
     "dev:server": "nodemon",
     "dev:assets": "webpack --mode=development -w"
   },
   "author": "or",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cross-fetch": "^3.1.5",
@@ -31,6 +32,7 @@
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
