--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "node-fetch": "^2.6.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -39,7 +40,6 @@
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.50.0",
