--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "or",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
+    "aws-sdk": "^2.1116.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cross-fetch": "^3.1.5",
@@ -24,16 +24,17 @@
     "express-session": "^1.17.2",
     "file-system": "^2.2.2",
     "mongoose": "^6.2.10",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2",
-    "morgan": "^1.10.0"
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
@@ -41,7 +42,6 @@
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.15",
-    "regenerator-runtime": "^0.13.9",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "webpack": "^5.72.0",
